--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -39,8 +39,7 @@ tools:context=".ui.login.LoginFragment">
     android:layout_gravity="start"
     android:layout_marginTop="16dp"
     android:layout_marginBottom="64dp"
-    android:enabled="false"
-    android:text="@string/action_sign_in"
+    android:text="Iniciar Sesión"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
