--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#F44336</color>
+    <color name="colorPrimaryDark">#D32F2F</color>
+    <color name="colorAccent">#FEC109</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -17,4 +20,10 @@
     <color name="grey_90">#263238</color>
     <color name="grey_95">#1a1a1a</color>
     <color name="grey_100_">#0d0d0d</color>
+    <color name="text_black">#111111</color>
+    <color name="text_gray">#4C5957</color>
+    <color name="hp_background">#B8AF5B</color>
+    <color name="attack_background">#8F8101</color>
+    <color name="defense_background">#AFCDF3</color>
+    <color name="speed_background">#F3DB03</color>
 </resources>
